host/firewall/rules.v4
# Generated by iptables-save v1.8.11 on Tue Jun 23 07:39:30 2026
*nat
:PREROUTING ACCEPT [1122:71820]
:INPUT ACCEPT [980:62092]
:OUTPUT ACCEPT [2311:139095]
:POSTROUTING ACCEPT [2311:139095]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.99.0.0/24 ! -d 10.99.0.0/24 -m comment --comment "VPN MASQ" -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Jun 23 07:39:30 2026
# Generated by iptables-save v1.8.11 on Tue Jun 23 07:39:30 2026
*filter
:INPUT DROP [82:5414]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [47954:3601062]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4502 -j ACCEPT
-A INPUT -s 10.99.0.0/24 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 500 -j ACCEPT
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT
-A INPUT -s 192.168.10.0/24 -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m comment --comment "vpn-portal: HTTP (nginx)" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m comment --comment "vpn-portal: HTTPS (nginx)" -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -s 10.99.0.0/24 -j ACCEPT
-A FORWARD -d 10.99.0.0/24 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Tue Jun 23 07:39:30 2026
# Generated by iptables-save v1.8.11 on Tue Jun 23 07:39:30 2026
*mangle
:PREROUTING ACCEPT [54960:5146974]
:INPUT ACCEPT [54952:5145694]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [55100:5161577]
:POSTROUTING ACCEPT [55106:5161919]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1260
COMMIT
# Completed on Tue Jun 23 07:39:30 2026
